--- a/css/bootstrap-toggle.css
+++ b/css/bootstrap-toggle.css
@@ -3,13 +3,22 @@
 * -----------------------------------
 * Copyright 2013 Min Hur, The New York Times Company
 * This content is released under the MIT License.
+*
+* bootstrap-toggle v1.1.1
+* ------------------------------------
+* This version fixed switcher can't show correctly on BS3
 */
 .toggle {
 	min-width: 40px;
 	height: 20px;
 	position: relative;
 	overflow: hidden;
+	box-sizing: content-box;
 }
+.toggle .btn {
+	line-height: 20px;
+}
+		
 .toggle input[type="checkbox"] {
 	display: none;
 }
@@ -48,13 +57,23 @@
 	border-radius: 0;
 }
 .toggle-handle {
-	position: relative;
-	margin: 0 auto;
-	padding-top: 0px;
-	padding-bottom: 0px;
-	height: 100%;
-	width: 0px;
-	border-width: 0 1px;
+    border-width: 0 1px;
+    height: 100%;
+    margin: 0 auto;
+    padding-bottom: 0;
+    padding-top: 0;
+    position: relative;
+    width: 0;
+    background-color: #f5f5f5;
+    background-image: linear-gradient(to bottom, #fff, #e6e6e6);
+    background-repeat: repeat-x;
+    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) #b3b3b3;
+    border-image: none;
+    border-radius: 4px;
+    border-style: solid;
+    border-width: 1px;
+    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
+    color: #333;
 }
 .toggle-handle.btn-mini {
 	top: -1px;
@@ -75,3 +94,20 @@
 .toggle-on.btn-mini { padding-right: 12px; }
 .toggle-off.btn-mini { padding-left: 12px; }
 
+.btn-large {
+    border-radius: 6px;
+    font-size: 17.5px;
+    padding: 11px 19px;
+}
+
+.btn-small {
+    border-radius: 3px;
+    font-size: 11.9px;
+    padding: 2px 10px;
+}
+
+.btn-mini {
+    border-radius: 3px;
+    font-size: 10.5px;
+    padding: 0 6px;
+}
